fix: stop card being cut off on small screens

--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -3,9 +3,9 @@
     max-height: 100px;
 }
 
-.Line {
+/* .Line {
     width: 90%;
-}
+} */
 
 @media (min-width: 768px) {
     .ProfileImage{
